@@ -72,7 +72,7 @@ query timeout is too short, Euskalbar could receive a partial
 
 response. For instance, if you query Euskalterm with a 2 second
 
-timeout, you will get part of the whole response.<br /><br /><i>Perform subqueries:</i> Allows to perform subqueries in Elhuyar and 3000 dictionaries.<br /></li></ul><ul>
+timeout, you will get part of the whole response.<br /><br /><i>Perform subqueries:</i> Allows to perform subqueries in Elhuyar,&nbsp;3000 and Batua dictionaries.<br /></li></ul><ul>
 
 </ul></li><li><h3>Statistics</h3>Shows
 
@@ -80,7 +80,7 @@ a count of searches made with each of the bar dictionaries.</li> <li><h3>Show/hi
 
 bar buttons</h3>Richt-clicking in the bar shows a menu to toggle
 
-bar buttons.</li> </ul><h2>Shortcuts</h2>Euskalbar offers several shortcuts to facilitate the daily work:<br /><ul><li>Ctrl+Alt+E: Shows/hides Euskalbar</li><li>Ctrl+Alt+S: Focuses the textbox and, if it contains some text, selects it</li><li>Ctrl+Alt+Z: Toggles the language direction</li><li>Ctrl+Alt+H: Shows/hides the dictionaries menu</li><li>Ctrl+Alt+T: Shows/hides the context menu</li></ul><h2>Dictionaries menu</h2>This
+bar buttons.</li> </ul><h2>Shortcuts</h2>Euskalbar offers several shortcuts to facilitate the daily work:<br /><ul><li>Ctrl+Alt+A: Shows/hides Euskalbar</li><li>Ctrl+Alt+S: Focuses the textbox and, if it contains some text, selects it</li><li>Ctrl+Alt+Z: Toggles the language direction</li><li>Ctrl+Alt+H: Shows/hides the dictionaries menu</li><li>Ctrl+Alt+T: Shows/hides the context menu</li></ul><h2>Dictionaries menu</h2>This
 
 options gives the chance to access directly to several
 
