@@ -80,7 +80,7 @@ reciba solamente una parte de la respuesta. Por ejemplo, si se consulta
 
 en Euskalterm la palabra "escuela" con un tiempo límite de 2 segundos,
 
-no se reciben todos los resultados.<br /><br /><i>Consultar subentradas:</i> Permite consultar las subentradas de los diccionarios Elhuyar y 3000.<br /></li></ul></li><li><h3>Estadísticas</h3>Muestra
+no se reciben todos los resultados.<br /><br /><i>Consultar subentradas:</i> Permite consultar las subentradas de los diccionarios Elhuyar, 3000 y Batua.<br /></li></ul></li><li><h3>Estadísticas</h3>Muestra
 
 un recuento de las búsquedas realizadas con cada uno de los
 
@@ -90,7 +90,7 @@ los botones de la barra</h3>Pulsando con el botón derecho sobre
 
 la barra, existe la posibilidad de mostrar o esconder algunos de los
 
-diccionarios.</li> </ul> <h2>Atajos de teclado</h2>Euskalbar ofrece varios atajos de teclado que facilitan el trabajo diario:<br /><ul><li>Ctrl+Alt+E: Muestra/esconde Euskalbar</li><li>Ctrl+Alt+S: Enfoca la caja de texto, y si contiene algún texto, lo selecciona</li><li>Ctrl+Alt+Z: Modifica el sentido del botón de selección de idioma</li><li>Ctrl+Alt+H: Muestra/esconde el menú de diccionarios</li><li>Ctrl+Alt+T: Muestra/esconde el menú contextual</li></ul><h2>Menú de diccionarios</h2>
+diccionarios.</li> </ul> <h2>Atajos de teclado</h2>Euskalbar ofrece varios atajos de teclado que facilitan el trabajo diario:<br /><ul><li>Ctrl+Alt+A: Muestra/esconde Euskalbar</li><li>Ctrl+Alt+S: Enfoca la caja de texto, y si contiene algún texto, lo selecciona</li><li>Ctrl+Alt+Z: Modifica el sentido del botón de selección de idioma</li><li>Ctrl+Alt+H: Muestra/esconde el menú de diccionarios</li><li>Ctrl+Alt+T: Muestra/esconde el menú contextual</li></ul><h2>Menú de diccionarios</h2>
 
 Esta opción&nbsp;permite acceder directamente al sitio web de
 
