@@ -92,7 +92,7 @@ jasotzea. Esaterako, Euskalterm-en "eskola" hitza kontsultatzen bada
 
 eta denbora-muga 2 segundukoa bada, ez dira emaitza guztiak jasotzen.<br /><br /><i>Azpisarrerak
 
-kontsultatu:</i> Elhuyar eta 3000 hiztegiak kontsultatzen
+kontsultatu:</i> Elhuyar, 3000 eta Hiztegi Batua kontsultatzen
 
 direnean, beren
 
@@ -108,7 +108,7 @@ eskuineko botoiarekin barraren gainean sakatuz, bertako zenbait botoi
 
 erakutsi edo ezkutatzeko aukera dago.</li> </ul>
 
-<h2>Laster-teklak</h2>Euskalbarrek hainbat laster-tekla eskaintzen ditu eguneroko lana errazteko:<br /><ul><li>Ktrl+Alt+E: Euskalbar erakusten/ezkutatzen du</li><li>Ktrl+Alt+S: Testu-kutxa&nbsp;fokatzen du eta testuren bat badauka, hautatu egiten du</li><li>Ktrl+Alt+Z: Hizkuntza hautatzeko botoiaren zentzua aldatzen du</li><li>Ktrl+Alt+H: Hiztegien menua erakusten/ezkutatzen du</li><li>Ktrl+Alt+T: Testuinguru-menua erakusten/ezkutatzen du</li></ul><h2>Hiztegien
+<h2>Laster-teklak</h2>Euskalbarrek hainbat laster-tekla eskaintzen ditu eguneroko lana errazteko:<br /><ul><li>Ktrl+Alt+A: Euskalbar erakusten/ezkutatzen du</li><li>Ktrl+Alt+S: Testu-kutxa&nbsp;fokatzen du eta testuren bat badauka, hautatu egiten du</li><li>Ktrl+Alt+Z: Hizkuntza hautatzeko botoiaren zentzua aldatzen du</li><li>Ktrl+Alt+H: Hiztegien menua erakusten/ezkutatzen du</li><li>Ktrl+Alt+T: Testuinguru-menua erakusten/ezkutatzen du</li></ul><h2>Hiztegien
 
 menua</h2>
 
