@@ -72,7 +72,7 @@
       <preference id="prefSkin" name="euskalbar.style.combinedquery" type="string"/>
     </preferences>
 
-    <tabbox flex="1">
+    <tabbox flex="1" selectedIndex="1">
       <tabs>
         <tab label="&euskalbar.prefs.general.tabtitle;"/>
         <tab label="&euskalbar.prefs.dictionaries.tabtitle;"/>
@@ -130,13 +130,14 @@
 
         <tabpanel id="tab-aurreratua">
           <vbox flex="1">
-              <tabbox  flex="1">
+              <tabbox flex="1" selectedIndex="0">
                 <tabs >
                    <tab style="height:2em" label="Enter"/>
                    <tab style="height:2em" label="Shift+Enter"/>
                    <tab style="height:2em" label="Ktrl+Enter"/>
                 </tabs>
                 <tabpanels flex="1" >
+                <tabpanel id="tab-enter">
                   <grid flex="1">
                     <columns>
                       <column flex="1" />
@@ -189,6 +190,8 @@
                     </row>
                     </rows>
                   </grid> 
+</tabpanel>
+<tabpanel id="tab-shiftenter">
                   <grid flex="1">
                     <columns>
                       <column flex="1" />
@@ -230,6 +233,8 @@
                     </row>
                     </rows>
                   </grid>
+</tabpanel>
+<tabpanel id="tab-ctrlenter">
                   <grid flex="1">
                     <columns>
                       <column flex="1" />
@@ -271,6 +276,7 @@
                     </row>
                     </rows>
                   </grid>
+</tabpanel>
                 </tabpanels>
               </tabbox>
 	    <groupbox>
