@@ -14,6 +14,7 @@
 - Testuinguru-menua erakutsi/ezkutatzeko hobespena sortu da. (#48)
 - Laster-teklak sortu dira. (#44)
 - Euskalterm-en bilaketak egitean, hitz baten hasiera kontsultatzen bada, hitz amaieran "*" komodina idatzi balitz bezala funtzionatzen du. (#60)
+- Estatistiken kudeaketa hobetu da. (#30)
 
 
 3.0 bertsioa
